PR4783: remove traces of stap{run,io} self-renicing